css optimize, navbar optimize

--- a/iproc-2go/index.html
+++ b/iproc-2go/index.html
@@ -30,7 +30,7 @@
     <link rel="shortcut icon" href="../lib/img/iproc-2-go/iproc-2-go.svg" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css?family=Inter" rel="stylesheet" />
     <link rel="stylesheet" href="../lib/css/flowbite.min.css" />
-    <link rel="stylesheet" href="../lib/css/output.css" />
+    <link rel="stylesheet" href="../lib/css/output.min.css" />
     <link rel="stylesheet" href="../lib/css/style.min.css">
     <link rel="stylesheet" href="../lib/css/iproc-2-go.css" defermedia="screen" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css" />
@@ -549,7 +549,7 @@
 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <script src="../lib/js/navbar.js"></script>
+    <script src="../lib/js/navbar.min.js"></script>
     <script src="../lib/js/flowbite.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
