--- a/iproc-cloud/index.html
+++ b/iproc-cloud/index.html
@@ -116,7 +116,7 @@
                     </div>
                 </div> -->
 
-                <a class="button-nav hidden xl:block" href="http://wa.me/6281315870596">
+                <a class="button-nav hidden xl:block" href="mailto:support.cloud@pengadaan.com">
                     <button type="button"
                         class="bg-primary text-white hover:shadow-inner focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-base px-8 py-2 text-center cursor-pointer hover:bg-[#02519b]">Hubungi
                         Kami</button>
@@ -141,7 +141,7 @@
                     <li class="nav-item">
                         <a href="#home"
                             class="nav-link text-base block text-gray-900 hover:bg-blue-100 w-full py-1.5 px-2 xl:px-3 rounded active">iProc
-                            Cloud: <span class="font-bold">Plug & Play eProcurement</span></a>
+                            Cloud: <span class="font-bold">Plug & Play e-Procurement</span></a>
                     </li>
                     <li class="nav-item">
                         <a href="#problem"
@@ -167,7 +167,7 @@
                             Implementasi</a>
                     </li>
                     <li>
-                        <a class="button-nav-mini ml-1.5 my-2 hidden" href="http://wa.me/6281315870596">
+                        <a class="button-nav-mini ml-1.5 my-2 hidden" href="mailto:support.cloud@pengadaan.com">
                             <button type="button"
                                 class=" bg-primary text-white hover:shadow-inner focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-base px-8 py-2 text-center cursor-pointer hover:bg-[#02519b]">Hubungi
                                 Kami</button>
@@ -207,8 +207,7 @@
                     e-Procurement, namun...
                     <!-- Your organization has already adopted <br> e-Procurement, but... -->
                 </h2>
-                <div
-                    class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-y-8 lg:gap-y-0 -mr-8 -ml-8">
+                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-y-8 lg:gap-y-0 -mr-8 -ml-8">
                     <div class="flex flex-col items-center px-8 border-r-0 border-sky-200 lg:border-r-2"
                         data-aos="fade-up" data-aos-duration="800">
                         <img loading="lazy" src="../lib/img/iproc cloud/problem-1.svg" class="mb-4 w-8/12 sm:w-12/12"
@@ -538,19 +537,22 @@
                     Perbedaan iProc VMS, iProc e-Bidding dan iProc Private Cloud
                 </h2>
 
-                <div class="-mx-8 xl:-mx-0 overflow-auto">
-                    <div class="min-w-[1080px] lg:min-w-[1279px] xl:min-w-auto px-8 xl:px-0  grid grid-cols-12 gap-x-6 sm:gap-x-8">
+                <div class="-mx-8 xl:-mx-0 overflow-auto xl:overflow-visible">
+                    <div
+                        class="min-w-[1080px] lg:min-w-[1279px] xl:min-w-auto px-8 xl:px-0  grid grid-cols-12 gap-x-6 sm:gap-x-8">
                         <div
                             class="bg-white col-span-4 h-full shadow rounded-xl p-8 border border-gray-200 flex flex-col hover:scale-105 transition">
                             <div class="flex flex-col justify-between price-head">
                                 <div class="flex flex-col">
-                                    <h3 class="text-900 text-lg xl:text-2xl font-semibold text-center mb-5 mt-12">Cloud VMS
+                                    <h3 class="text-900 text-lg xl:text-2xl font-semibold text-center mb-5 mt-12">Cloud
+                                        VMS
                                     </h3>
                                     <div class="mb-5">
-                                        <p class="text-2xl xl:text-4xl text-[#005db5] font-bold text-center">6 Juta <span
-                                                class="text-sm xl:text-base font-normal text-gray-500">/ Bulan</span></p>
-                                        <p class="text-sm xl:text-base text-[#005DB5] font-medium text-center mt-4"><span
-                                                class="font-bold">10
+                                        <p class="text-2xl xl:text-4xl text-[#005db5] font-bold text-center">6 Juta
+                                            <span class="text-sm xl:text-base font-normal text-gray-500">/ Bulan</span>
+                                        </p>
+                                        <p class="text-sm xl:text-base text-[#005DB5] font-medium text-center mt-4">
+                                            <span class="font-bold">10
                                                 juta</span> di awal untuk biaya setup aplikasi</p>
                                         <p class="text-sm xl:text-base text-center mt-4 text-gray-900">
                                             Setup & implementasi dalam <strong>1 hari</strong> <br>
@@ -789,10 +791,11 @@
                                         eBidding
                                     </h3>
                                     <div class="mb-5">
-                                        <p class="text-2xl xl:text-4xl text-[#005db5] font-bold text-center">11 Juta <span
-                                                class="text-sm xl:text-base font-normal text-gray-500">/ Bulan</span></p>
-                                        <p class="text-sm xl:text-base text-[#005DB5] font-medium text-center mt-4"><span
-                                                class="font-bold">20
+                                        <p class="text-2xl xl:text-4xl text-[#005db5] font-bold text-center">11 Juta
+                                            <span class="text-sm xl:text-base font-normal text-gray-500">/ Bulan</span>
+                                        </p>
+                                        <p class="text-sm xl:text-base text-[#005DB5] font-medium text-center mt-4">
+                                            <span class="font-bold">20
                                                 juta</span> di awal untuk biaya setup aplikasi</p>
                                         <p class="text-sm xl:text-base text-center mt-4 text-gray-900">
                                             Setup & implementasi dalam <strong>5 hari</strong> <br>
@@ -1000,12 +1003,15 @@
                             class="bg-white col-span-4 h-full shadow rounded-xl p-8 border border-gray-200 flex flex-col hover:scale-105 transition">
                             <div class="flex flex-col justify-between price-head">
                                 <div class="flex flex-col">
-                                    <h3 class="text-900 text-lg xl:text-2xl font-semibold text-center mb-5 mt-12">Private
+                                    <h3 class="text-900 text-lg xl:text-2xl font-semibold text-center mb-5 mt-12">
+                                        Private
                                         Cloud
                                     </h3>
                                     <div class="mb-5">
-                                        <p class="text-2xl xl:text-4xl text-[#005db5] font-bold text-center">Hubungi Kami</p>
-                                        <p class="text-sm xl:text-base text-[#005DB5] font-medium text-center mt-4">Hubungi kami untuk
+                                        <p class="text-2xl xl:text-4xl text-[#005db5] font-bold text-center">Hubungi
+                                            Kami</p>
+                                        <p class="text-sm xl:text-base text-[#005DB5] font-medium text-center mt-4">
+                                            Hubungi kami untuk
                                             konsultasi
                                             biaya.
                                         </p>
@@ -1015,7 +1021,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <a href=""
+                                <a href="mailto:support.cloud@pengadaan.com"
                                     class="flex justify-center text-sm xl:text-base w-full p-2 xl:p-2.5 rounded-lg bg-[#005db5] text-white hover:cursor-pointer hover:bg-[#02519b]">Hubungi
                                     Kami</span>
                                 </a>
@@ -1212,14 +1218,18 @@
                     class="text-xl md:text-2xl! lg:text-5xl! font-extrabold mx-auto text-white leading-tight mb-8 w-full sm:max-w-2/3">
                     Tinggalkan Sistem Lama, Beralih ke iProc Cloud Sekarang!
                 </p>
-                <a href="http://wa.me/6281315870596">
+                <a href="mailto:support.cloud@pengadaan.com">
                     <button
                         class="bg-white inline-flex gap-2 text-[#005bd5] hover:shadow-inner focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-base px-5 py-2.5 text-center cursor-pointer hover:bg-gray-100">
-                        <svg class="w-6 h-6 text-[#005db5]" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                            width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                        <svg class="w-6 h-6 text-[#005db5]" aria-hidden="true"
+                            xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                            viewBox="0 0 24 24">
                             <path
-                                d="M7.978 4a2.553 2.553 0 0 0-1.926.877C4.233 6.7 3.699 8.751 4.153 10.814c.44 1.995 1.778 3.893 3.456 5.572 1.68 1.679 3.577 3.018 5.57 3.459 2.062.456 4.115-.073 5.94-1.885a2.556 2.556 0 0 0 .001-3.861l-1.21-1.21a2.689 2.689 0 0 0-3.802 0l-.617.618a.806.806 0 0 1-1.14 0l-1.854-1.855a.807.807 0 0 1 0-1.14l.618-.62a2.692 2.692 0 0 0 0-3.803l-1.21-1.211A2.555 2.555 0 0 0 7.978 4Z" />
+                                d="M2.038 5.61A2.01 2.01 0 0 0 2 6v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6c0-.12-.01-.238-.03-.352l-.866.65-7.89 6.032a2 2 0 0 1-2.429 0L2.884 6.288l-.846-.677Z" />
+                            <path
+                                d="M20.677 4.117A1.996 1.996 0 0 0 20 4H4c-.225 0-.44.037-.642.105l.758.607L12 10.742 19.9 4.7l.777-.583Z" />
                         </svg>
+
                         Hubungi Kami
                     </button>
                 </a>
@@ -1274,9 +1284,7 @@
             </div>
             <hr class="border-white my-10">
             <div class="flex flex-col sm:flex-row justify-between gap-4">
-                <span class="text-sm sm:text-base text-center sm:text-left!">Copyright © 2024 All rights reserved -
-                    IProc ADW ID | Terms &
-                    Conditions</span>
+                <span class="text-sm sm:text-base text-center sm:text-left!">Copyright PT Anggada Duta Wisesa © 2025 | iProc Cloud, All Rights Reserved</span>
                 <div class="flex justify-center gap-4">
                     <a href="https://www.youtube.com/@adwconsulting6136"
                         class="border-1 border-white p-2 rounded-full whitespace-nowrap w-[34px] h-[34px]">
