--- a/index.html
+++ b/index.html
@@ -1878,9 +1878,7 @@
             </div>
             <hr class="border-white my-10">
             <div class="flex flex-col sm:flex-row justify-between gap-4">
-                <span class="text-sm sm:text-base text-center sm:text-left!">Copyright © 2024 All rights reserved -
-                    IProc ADW ID | Terms &
-                    Conditions</span>
+                <span class="text-sm sm:text-base text-center sm:text-left!">Copyright PT Anggada Duta Wisesa © 2025 | iProc, All Rights Reserved</span>
                 <div class="flex justify-center gap-4">
                     <a href="https://www.youtube.com/@adwconsulting6136"
                         class="border-1 border-white p-2 rounded-full whitespace-nowrap w-[34px] h-[34px]">
