--- a/iproc-2go/index.html
+++ b/iproc-2go/index.html
@@ -172,13 +172,13 @@
             <div class="max-w-screen-2xl mx-auto px-8 sm:px-14! grid grid-cols-1 sm:grid-cols-12! gap-4 items-center">
                 <div class="col-span-6">
                     <img loading="lazy" class="mb-4 mx-auto sm:mx-0" src="../lib/img/iproc-2-go/iproc-2-go.svg"
-                        alt="iProc 2 Go Logo" />
+                        alt="iProc 2Go Logo" />
                     <h1
                         class="mb-5 text-2xl text-center sm:text-left! md:text-4xl! lg:text-6xl! font-extrabold text-gray-900 leading-snug">
                         Transformasi Pengadaan di Ujung Jari Anda!
                     </h1>
                     <p class="text-gray-500 mb-5 text-center sm:text-left! text-sm md:text-base lg:text-xl leading-normal">
-                        Kapan saja dan di mana saja, akses beberapa fitur iProc kini semakin mudah dengan iProc 2 Go,
+                        Kapan saja dan di mana saja, akses beberapa fitur iProc kini semakin mudah dengan iProc 2Go,
                         aplikasi iProc di mobile phone Anda.
                     </p>
                     <div class="flex gap-4 flex-col lg:flex-row">
@@ -298,11 +298,11 @@
         <section id="solution" class="solve py-12 sm:py-20!">
             <div class="max-w-screen-2xl mx-auto px-8 sm:px-14!">
                 <img loading="lazy" src="../lib/img/iproc-2-go/iproc-2-go.svg" class="mx-auto w-30 mb-2"
-                    alt="iProc 2GO Logo">
+                    alt="iProc 2Go Logo">
                 <h2 class="text-2xl sm:text-4xl! text-center font-bold text-gray-900 mb-2">
-                    iProc 2 Go Solusinya!
+                    iProc 2Go Solusinya!
                 </h2>
-                <p class="text-sm sm:text-xl! text-center text-gray-700 mb-12">Dengan iProc 2 Go, Anda dapat melakukan
+                <p class="text-sm sm:text-xl! text-center text-gray-700 mb-12">Dengan iProc 2Go, Anda dapat melakukan
                     hal-hal berikut
                     tanpa harus membuka laptop:</p>
                 <div class="grid grid-cols-12 gap-8">
@@ -434,7 +434,7 @@
                 </a>
                 <p class="text-sm sm:text-base! text-white mt-4">
                     *hanya fitur-fitur tertentu dari iProc yang dapat
-                    dikelola melalui iProc 2 Go
+                    dikelola melalui iProc 2Go
                 </p>
                 <img loading="lazy" src="../lib/img/iproc-2-go/phone.webp"
                     class="relative -bottom-15 mx-auto right-0 w-1/2 hidden sm:block md:absolute! md:bottom-0 md:right-8! md:w-1/4!"
@@ -448,7 +448,7 @@
                 <div class="col-span-12 sm:col-span-6 lg:col-span-4!">
                     <img loading="lazy" src="../lib/img/iproc-white.svg" class="w-30 mb-5" alt="iProc Logo">
                     <p class="text-sm sm:text-base! mb-5">Kapan saja dan di mana saja, akses beberapa fitur iProc kini
-                        semakin mudah dengan iProc 2GO, aplikasi iProc di mobile phone Anda.</p>
+                        semakin mudah dengan iProc 2Go, aplikasi iProc di mobile phone Anda.</p>
                     <h3 class="text-base sm:text-lg font-bold mb-5">Certified & Registered</h3>
                     <img loading="lazy" src="../lib/img/iproc-2-go/certified-registered.png" class="w-full"
                         alt="Certified Registered">
@@ -498,9 +498,7 @@
             </div>
             <hr class="border-white my-10">
             <div class="flex flex-col sm:flex-row justify-between gap-4">
-                <span class="text-sm sm:text-base text-center sm:text-left!">Copyright © 2024 All rights reserved -
-                    IProc ADW ID | Terms &
-                    Conditions</span>
+                <span class="text-sm sm:text-base text-center sm:text-left!">Copyright PT Anggada Duta Wisesa © 2025 | iProc 2Go, All Rights Reserved</span>
                 <div class="flex justify-center gap-4">
                     <a href="https://www.youtube.com/@adwconsulting6136"
                         class="border-1 border-white p-2 rounded-full whitespace-nowrap w-[34px] h-[34px]">
