--- a/iproc-cloud/index.html
+++ b/iproc-cloud/index.html
@@ -314,7 +314,7 @@
                                         d="M5.00878 13.2628C4.7803 13.2639 4.56052 13.1566 4.39647 12.9638L0.264208 8.10324C0.181845 8.00577 0.116126 7.88958 0.0708037 7.76132C0.0254817 7.63307 0.00144401 7.49524 6.31568e-05 7.35572C-0.00272561 7.07395 0.086941 6.80237 0.249337 6.60074C0.411734 6.3991 0.633557 6.28393 0.866009 6.28055C1.09846 6.27717 1.3225 6.38586 1.48884 6.58271L5.01228 10.7255L12.5105 1.89813C12.6771 1.70128 12.9014 1.5927 13.134 1.59628C13.3666 1.59986 13.5885 1.7153 13.7509 1.91722C13.9133 2.11913 14.0029 2.39098 13.9999 2.67295C13.997 2.95492 13.9017 3.22393 13.7352 3.42078L5.6211 12.9638C5.45705 13.1566 5.23727 13.2639 5.00878 13.2628Z"
                                         fill="#0E9F6E" />
                                 </svg>
-                                <span>eProcurement berbasis cloud yang dapat langsung digunakan tanpa investasi
+                                <span>e-Procurement berbasis cloud yang dapat langsung digunakan tanpa investasi
                                     infrastruktur tambahan!</span>
                             </li>
                             <li class="flex items-start gap-3">
@@ -345,7 +345,7 @@
                                         fill="#0E9F6E" />
                                 </svg>
                                 <span>Tidak memerlukan biaya besar untuk pembangunan infrastruktur aplikasi
-                                    eProcurement.</span>
+                                    e-Procurement.</span>
                             </li>
                             <li class="flex items-start gap-3">
                                 <svg class="flex-shrink-0 mt-1" xmlns="http://www.w3 mt-2.org/2000/svg" width="14"
