activated iproc cloud link

--- a/index.html
+++ b/index.html
@@ -778,11 +778,11 @@
                                 </ul>
                             </div>
 
-                            <button
-                                class="bg-[#005db5] text-sm sm:text-base! text-white px-6 py-2 rounded-lg mt-6 opacity-70 inline-block"
-                                disabled>
-                                Coming Soon!
-                            </button>
+                            <a href="/iproc-cloud/"
+                                class="bg-[#005db5] text-sm sm:text-base! text-white px-6 py-2 rounded-lg mt-6 inline-block"
+                                >
+                                See More Information!
+                            </a>
                             <!-- <a href="#" class="mt-6">
                             </a> -->
                         </div>
