--- a/iproc-cloud/index.html
+++ b/iproc-cloud/index.html
@@ -6,8 +6,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
-    <meta name="description"
-        content="Solusi fleksibel, aman, dan hemat biaya untuk transformasi pengadaan Anda – tanpa infrastruktur
+    <meta name="description" content="Solusi fleksibel, aman, dan hemat biaya untuk transformasi pengadaan Anda – tanpa infrastruktur
                         tambahan." />
     <meta name="author" content="iproc.adw.co.id" />
     <meta name="keywords"
@@ -20,13 +19,17 @@
     <meta property="og:description" content="Solusi fleksibel, aman, dan hemat biaya untuk transformasi pengadaan Anda – tanpa infrastruktur
                         tambahan." />
     <meta property="og:image" content="../lib/img/iproc cloud/og.png" />
+    <meta property="og:image:secure_url" content="../lib/img/iproc cloud/og.png" />
+    <meta property="og:image:width" content="800" />
+    <meta property="og:image:height" content="800" />
+    <meta property="og:image:alt" content="iProc Cloud" />
+    <meta property="og:image:type" content="image/png" />
     <meta property="fb:app_id" content="344927490666349" />
     <meta name="twitter:card" content="summary" />
     <meta property="twitter:domain" content="iproc.id/iproc-cloud" />
     <meta property="twitter:url" content="https://iproc.id/iproc-cloud" />
     <meta name="twitter:title" content="iProc Cloud - Plug & Play e-Procurement" />
-    <meta name="twitter:description"
-        content="Solusi fleksibel, aman, dan hemat biaya untuk transformasi pengadaan Anda – tanpa infrastruktur
+    <meta name="twitter:description" content="Solusi fleksibel, aman, dan hemat biaya untuk transformasi pengadaan Anda – tanpa infrastruktur
                         tambahan." />
     <meta name="twitter:image" content="../lib/img/iproc cloud/og.png" />
     <title>iProc cloud</title>
@@ -266,7 +269,8 @@
                             <br>
                             Tentunya Anda
                             ingin proses pengadaan berjalan dengan cepat, hemat
-                            biaya, dan transparan. Tapi, kenyataannya…</h2>
+                            biaya, dan transparan. Tapi, kenyataannya…
+                        </h2>
                         <ul class="text-left text-lg space-y-6">
                             <li class="flex items-center gap-3">
                                 <span class="bg-red-100 p-3 rounded-full">
