--- a/iproc-cloud/index.html
+++ b/iproc-cloud/index.html
@@ -12,14 +12,14 @@
     <meta name="keywords"
         content="eProcurement, e-Procurement, Aplikasi eProcurement, ecatalog, e-katalog, Aplikasi eCatalog, Procurement 4.0, pengadaan, pengadaan barang / jasa pengadaan barang dan jasa, Pengadaan Indonesia, pengadaan pemerintah, pengadaan pengadaan pemerintah, pengadaan pertamina, pengadaan pln, Pelatihan pengadaaan, perpres pengadaan, Agen Pengadaan, tender, tender bumn, tender bumd, tender pemerintah, tender pertamina, tender pln, lelang, Info lelang, lelang bumn, lelang bumd, lelang pemerintah, lelang pertamina, lelang pln, Spend analysis tools, HPS, LKPP, ADW, IAPI" />
     <meta name="msapplication-TileColor" content="#FFFFFF" />
-    <meta name="msapplication-TileImage" content="../lib/img/iproc cloud/og.png" />
+    <meta name="msapplication-TileImage" content="https://iproc.id/lib/img/iproc cloud/og.png" />
     <meta property="og:url" content="https://iproc.id/iproc-cloud" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="iProc Cloud - Plug & Play e-Procurement" />
     <meta property="og:description" content="Solusi fleksibel, aman, dan hemat biaya untuk transformasi pengadaan Anda – tanpa infrastruktur
                         tambahan." />
-    <meta property="og:image" content="../lib/img/iproc cloud/og.png" />
-    <meta property="og:image:secure_url" content="../lib/img/iproc cloud/og.png" />
+    <meta property="og:image" content="https://iproc.id/lib/img/iproc cloud/og.png" />
+    <meta property="og:image:secure_url" content="https://iproc.id/lib/img/iproc cloud/og.png" />
     <meta property="og:image:width" content="800" />
     <meta property="og:image:height" content="800" />
     <meta property="og:image:alt" content="iProc Cloud" />
@@ -31,7 +31,7 @@
     <meta name="twitter:title" content="iProc Cloud - Plug & Play e-Procurement" />
     <meta name="twitter:description" content="Solusi fleksibel, aman, dan hemat biaya untuk transformasi pengadaan Anda – tanpa infrastruktur
                         tambahan." />
-    <meta name="twitter:image" content="../lib/img/iproc cloud/og.png" />
+    <meta name="twitter:image" content="https://iproc.id/lib/img/iproc cloud/og.png" />
     <title>iProc cloud</title>
     <link rel="shortcut icon" href="../lib/img/iproc cloud/iProc Cloud Vertical.svg" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css?family=Inter" rel="stylesheet" />
