--- a/iproc-2go/index.html
+++ b/iproc-2go/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
     <meta name="description"
-        content="iProc is a PROCUREMENT 4.0 Platform to assist Procurement &amp; SCM department in managing procurement, contract, vendor, inventory and asset management. Combination of iProc and pengadaan.com platform will unleash the power of digital in procurement and help the companies to rise DIGITAL TRANSFORMATION initiatives" />
+        content="Kapan saja dan di mana saja, akses beberapa fitur iProc kini semakin mudah dengan iProc 2Go, aplikasi iProc di mobile phone Anda." />
     <meta name="author" content="iproc.adw.co.id" />
     <meta name="keywords"
         content="eProcurement, e-Procurement, Aplikasi eProcurement, ecatalog, e-katalog, Aplikasi eCatalog, Procurement 4.0, pengadaan, pengadaan barang / jasa pengadaan barang dan jasa, Pengadaan Indonesia, pengadaan pemerintah, pengadaan pengadaan pemerintah, pengadaan pertamina, pengadaan pln, Pelatihan pengadaaan, perpres pengadaan, Agen Pengadaan, tender, tender bumn, tender bumd, tender pemerintah, tender pertamina, tender pln, lelang, Info lelang, lelang bumn, lelang bumd, lelang pemerintah, lelang pertamina, lelang pln, Spend analysis tools, HPS, LKPP, ADW, IAPI" />
@@ -14,17 +14,23 @@
     <meta name="msapplication-TileImage" content="https://iproc.id/assets/img/og.png" />
     <meta property="og:url" content="https://iproc.id/" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="iProc - Integrated Procurement 4.0 Platform" />
+    <meta property="og:title" content="iProc 2Go - Transformasi Pengadaan di Ujung Jari Anda!" />
     <meta property="og:description"
-        content="iProc is a Procurement 4.0 Platform to assist Procurement &amp; SCM department in managing procurement, contract, vendor, inventory and asset management. Combination of iProc and pengadaan.com platform will unleash the power of digital in procurement and help the companies to rise DIGITAL TRANSFORMATION initiatives." />
+        content="Kapan saja dan di mana saja, akses beberapa fitur iProc kini semakin mudah dengan iProc 2Go, aplikasi iProc di mobile phone Anda." />
     <meta property="og:image" content="https://iproc.id/assets/img/og.png" />
+    <meta property="og:image" content="https://iproc.id/lib/img/iproc-2-go/og.png" />
+    <meta property="og:image:secure_url" content="https://iproc.id/lib/img/iproc-2-go/og.png" />
+    <meta property="og:image:width" content="800" />
+    <meta property="og:image:height" content="800" />
+    <meta property="og:image:alt" content="iProc Cloud" />
+    <meta property="og:image:type" content="image/png" />
     <meta property="fb:app_id" content="344927490666349" />
     <meta name="twitter:card" content="summary" />
-    <meta property="twitter:domain" content="iproc.id" />
-    <meta property="twitter:url" content="https://iproc.id/" />
-    <meta name="twitter:title" content="iProc - Integrated Procurement 4.0 Platform" />
+    <meta property="twitter:domain" content="iproc.id/iproc-2go" />
+    <meta property="twitter:url" content="https://iproc.id/iproc-2go" />
+    <meta name="twitter:title" content="iProc 2Go - Transformasi Pengadaan di Ujung Jari Anda!" />
     <meta name="twitter:description"
-        content="iProc is a Procurement 4.0 Platform to assist Procurement &amp; SCM department in managing procurement, contract, vendor, inventory and asset management. Combination of iProc and pengadaan.com platform will unleash the power of digital in procurement and help the companies to rise DIGITAL TRANSFORMATION initiatives." />
+        content="Kapan saja dan di mana saja, akses beberapa fitur iProc kini semakin mudah dengan iProc 2Go, aplikasi iProc di mobile phone Anda." />
     <meta name="twitter:image" content="https://iproc.id/assets/img/og.png" />
     <title>iProc 2Go</title>
     <link rel="shortcut icon" href="../lib/img/iproc-2-go/iproc-2-go.svg" type="image/x-icon" />
