--- a/iproc-2go/index.html
+++ b/iproc-2go/index.html
@@ -21,7 +21,7 @@
     <meta property="og:image:secure_url" content="https://iproc.id/lib/img/iproc-2-go/og.png" />
     <meta property="og:image:width" content="800" />
     <meta property="og:image:height" content="800" />
-    <meta property="og:image:alt" content="iProc Cloud" />
+    <meta property="og:image:alt" content="iProc 2Go" />
     <meta property="og:image:type" content="image/png" />
     <meta property="fb:app_id" content="344927490666349" />
     <meta name="twitter:card" content="summary" />
