--- a/iproc-cloud/index.html
+++ b/iproc-cloud/index.html
@@ -12,14 +12,14 @@
     <meta name="keywords"
         content="eProcurement, e-Procurement, Aplikasi eProcurement, ecatalog, e-katalog, Aplikasi eCatalog, Procurement 4.0, pengadaan, pengadaan barang / jasa pengadaan barang dan jasa, Pengadaan Indonesia, pengadaan pemerintah, pengadaan pengadaan pemerintah, pengadaan pertamina, pengadaan pln, Pelatihan pengadaaan, perpres pengadaan, Agen Pengadaan, tender, tender bumn, tender bumd, tender pemerintah, tender pertamina, tender pln, lelang, Info lelang, lelang bumn, lelang bumd, lelang pemerintah, lelang pertamina, lelang pln, Spend analysis tools, HPS, LKPP, ADW, IAPI" />
     <meta name="msapplication-TileColor" content="#FFFFFF" />
-    <meta name="msapplication-TileImage" content="https://iproc.id/lib/img/iproc cloud/og.png" />
+    <meta name="msapplication-TileImage" content="https://iproc.id/lib/img/iproc-cloud/og.png" />
     <meta property="og:url" content="https://iproc.id/iproc-cloud" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="iProc Cloud - Plug & Play e-Procurement" />
     <meta property="og:description" content="Solusi fleksibel, aman, dan hemat biaya untuk transformasi pengadaan Anda – tanpa infrastruktur
                         tambahan." />
-    <meta property="og:image" content="https://iproc.id/lib/img/iproc cloud/og.png"  />
-    <meta property="og:image:secure_url" content="https://iproc.id/lib/img/iproc cloud/og.png" />
+    <meta property="og:image" content="https://iproc.id/lib/img/iproc-cloud/og.png"  />
+    <meta property="og:image:secure_url" content="https://iproc.id/lib/img/iproc-cloud/og.png" />
     <meta property="og:image:width" content="800" />
     <meta property="og:image:height" content="800" />
     <meta property="og:image:alt" content="iProc Cloud" />
@@ -31,9 +31,9 @@
     <meta name="twitter:title" content="iProc Cloud - Plug & Play e-Procurement" />
     <meta name="twitter:description" content="Solusi fleksibel, aman, dan hemat biaya untuk transformasi pengadaan Anda – tanpa infrastruktur
                         tambahan." />
-    <meta name="twitter:image" content="https://iproc.id/lib/img/iproc cloud/og.png" />
+    <meta name="twitter:image" content="https://iproc.id/lib/img/iproc-cloud/og.png" />
     <title>iProc cloud</title>
-    <link rel="shortcut icon" href="../lib/img/iproc cloud/iProc Cloud Vertical.svg" type="image/x-icon" />
+    <link rel="shortcut icon" href="../lib/img/iproc-cloud/iProc Cloud Vertical.svg" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css?family=Inter" rel="stylesheet" />
     <link rel="stylesheet" href="../lib/css/flowbite.min.css" />
     <link rel="stylesheet" href="../lib/css/output.css" />
@@ -199,7 +199,7 @@
                     </p>
                 </div>
                 <div class="cloud-content flex-grow -mx-8 overflow-x-clip overflow-y-visible">
-                    <img src="../lib/img/iproc cloud/hero-illustrationx2.webp" alt="Cloud System Illustration"
+                    <img src="../lib/img/iproc-cloud/hero-illustrationx2.webp" alt="Cloud System Illustration"
                         class="w-full mx-auto" data-aos="zoom-in-down" data-aos-duration="800" />
                 </div>
             </div>
@@ -215,7 +215,7 @@
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-y-8 lg:gap-y-0 -mr-8 -ml-8">
                     <div class="flex flex-col items-center px-8 border-r-0 border-sky-200 lg:border-r-2"
                         data-aos="fade-up" data-aos-duration="800">
-                        <img loading="lazy" src="../lib/img/iproc cloud/problem-1.svg" class="mb-4 w-8/12 sm:w-12/12"
+                        <img loading="lazy" src="../lib/img/iproc-cloud/problem-1.svg" class="mb-4 w-8/12 sm:w-12/12"
                             alt="Biaya Besar" />
                         <p class="w-full text-gray-800 font-semibold text-left text-base xl:text-xl">
                             Masih membutuhkan biaya besar untuk infrastruktur dan
@@ -225,7 +225,7 @@
                     </div>
                     <div class="flex flex-col items-center px-8 border-r-0 border-sky-200 lg:border-r-2"
                         data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
-                        <img loading="lazy" src="../lib/img/iproc cloud/problem-2.svg" class="mb-4 w-8/12 sm:w-12/12"
+                        <img loading="lazy" src="../lib/img/iproc-cloud/problem-2.svg" class="mb-4 w-8/12 sm:w-12/12"
                             alt="Implementasi Rumit" />
                         <p class="w-full text-gray-800 font-semibold text-left text-base xl:text-xl">
                             Implementasi sistem terasa rumit dan memakan waktu?
@@ -234,7 +234,7 @@
                     </div>
                     <div class="flex flex-col items-center px-8 border-r-0 border-sky-200 lg:border-r-2"
                         data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
-                        <img loading="lazy" src="../lib/img/iproc cloud/problem-3.svg" class="mb-4 w-8/12 sm:w-12/12"
+                        <img loading="lazy" src="../lib/img/iproc-cloud/problem-3.svg" class="mb-4 w-8/12 sm:w-12/12"
                             alt="Akses Terbatas" />
                         <p class="w-full text-gray-800 font-semibold text-left text-base xl:text-xl">
                             Akses terbatas hanya di jaringan internal, tidak fleksibel
@@ -245,7 +245,7 @@
                     </div>
                     <div class="flex flex-col items-center px-8" data-aos="fade-up" data-aos-duration="800"
                         data-aos-delay="300">
-                        <img loading="lazy" src="../lib/img/iproc cloud/problem-4.svg" class="mb-4 w-8/12 sm:w-12/12"
+                        <img loading="lazy" src="../lib/img/iproc-cloud/problem-4.svg" class="mb-4 w-8/12 sm:w-12/12"
                             alt="Implementasi Lama" />
                         <p class="w-full text-gray-800 font-semibold text-left text-base xl:text-xl">
                             Implementasi sistem terasa rumit dan memakan waktu?
@@ -260,7 +260,7 @@
                         <span class="text-6xl">placeholder</span>
                     </div> -->
                     <div class="w-full lg:w-5/12 flex items-center">
-                        <img class="w-8/12 lg:w-full mx-auto" src="../lib/img/iproc cloud/pain-point-illustration.webp"
+                        <img class="w-8/12 lg:w-full mx-auto" src="../lib/img/iproc-cloud/pain-point-illustration.webp"
                             alt="Pain Point Illustration">
                     </div>
                     <div class="w-full lg:w-7/12">
@@ -422,7 +422,7 @@
                     </div>
                     <div class="w-full lg:w-5/12 flex items-center order-1 lg:order-2">
                         <img class="w-8/12 lg:w-full mx-auto"
-                            src="../lib//img/iproc cloud/pain-point-illustration-2.webp"
+                            src="../lib//img/iproc-cloud/pain-point-illustration-2.webp"
                             alt="Pain Point Illustration 2">
                     </div>
                 </div>
@@ -445,25 +445,25 @@
                     </p>
                 </div>
                 <div class="relative w-4/5 sm:min-w-6/12 md:-bottom-5">
-                    <img loading="lazy" class="w-full" src="../lib/img/iproc cloud/solution-highlight.webp"
+                    <img loading="lazy" class="w-full" src="../lib/img/iproc-cloud/solution-highlight.webp"
                         alt="Desktop Illustration" data-aos="fade-up" data-aos-duration="800">
                     <!-- <div
                         class="w-full absolute -left-5 sm:-left-10 bottom-10 sm:bottom-16 grid grid-cols-2 gap-y-[6%] gap-x-[10%]">
                         <div class="flex items-start justify-start">
                             <img class="w-11/12 scale-[0.8] ml-auto shadow-xl rounded-xl"
-                                src="../lib/img/iproc cloud/popup-1.svg" alt="Image Popup">
+                                src="../lib/img/iproc-cloud/popup-1.svg" alt="Image Popup">
                         </div>
                         <div class="flex items-start justify-start">
                             <img class="w-11/12 scale-[1.2] ml-auto shadow-xl rounded-xl"
-                                src="../lib/img/iproc cloud/popup-2.svg" alt="Image Popup">
+                                src="../lib/img/iproc-cloud/popup-2.svg" alt="Image Popup">
                         </div>
                         <div class="flex items-start justify-start">
                             <img class="w-11/12 scale-[1.1] ml-auto shadow-xl rounded-xl"
-                                src="../lib/img/iproc cloud/popup-4.svg" alt="Image Popup">
+                                src="../lib/img/iproc-cloud/popup-4.svg" alt="Image Popup">
                         </div>
                         <div class="flex items-start justify-start">
                             <img class="w-11/12 scale-[1] ml-auto shadow-xl rounded-xl translate-x-10"
-                                src="../lib/img/iproc cloud/popup-3.svg" alt="Image Popup">
+                                src="../lib/img/iproc-cloud/popup-3.svg" alt="Image Popup">
                         </div>
                     </div> -->
                 </div>
@@ -480,7 +480,7 @@
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 xl:gap-8! w-full">
                     <div class="flex flex-col items-start bg-white shadow rounded-xl p-6" data-aos="fade-up"
                         data-aos-duration="800">
-                        <img loading="lazy" src="../lib/img/iproc cloud/solusi-1.svg"
+                        <img loading="lazy" src="../lib/img/iproc-cloud/solusi-1.svg"
                             class="w-8/12 sm:w-12/12 mb-5 mx-auto" alt=" Implementasi Mudah & Cepat" />
                         <h3 class="text-gray-900 font-bold text-base xl:text-xl mb-2 text-left">
                             Implementasi <br> Mudah & Cepat
@@ -510,7 +510,7 @@
                     </div>
                     <div class="flex flex-col items-start bg-white shadow rounded-xl p-6" data-aos="fade-up"
                         data-aos-duration="800" data-aos-delay="100">
-                        <img loading="lazy" src="../lib/img/iproc cloud/solusi-2.svg"
+                        <img loading="lazy" src="../lib/img/iproc-cloud/solusi-2.svg"
                             class="w-8/12 sm:w-12/12 mb-5 mx-auto" alt="Biaya Investasi & Operasional Rendah" />
                         <h3 class="text-gray-900 font-bold text-base xl:text-xl mb-2 text-left">
                             Biaya Investasi & <br> Operasional Rendah
@@ -539,7 +539,7 @@
                     </div>
                     <div class="flex flex-col items-start bg-white shadow rounded-xl p-6" data-aos="fade-up"
                         data-aos-duration="800" data-aos-delay="200">
-                        <img loading="lazy" src="../lib/img/iproc cloud/solusi-3.svg"
+                        <img loading="lazy" src="../lib/img/iproc-cloud/solusi-3.svg"
                             class="w-8/12 sm:w-12/12 mb-5 mx-auto" alt="Skalabilitas Tinggi" />
                         <h3 class="text-gray-900 font-bold text-base xl:text-xl mb-2 text-left">
                             Skalabilitas <br> Tinggi
@@ -567,7 +567,7 @@
                     </div>
                     <div class="flex flex-col items-start bg-white shadow rounded-xl p-6" data-aos="fade-up"
                         data-aos-duration="800" data-aos-delay="300">
-                        <img loading="lazy" src="../lib/img/iproc cloud/solusi-4.svg"
+                        <img loading="lazy" src="../lib/img/iproc-cloud/solusi-4.svg"
                             class="w-8/12 sm:w-12/12 mb-5 mx-auto" alt="Keamanan Data" />
                         <h3 class="text-gray-900 font-bold text-base xl:text-xl mb-2 text-left">
                             Jaminan <br> Keamanan Data
@@ -597,7 +597,7 @@
                     <div class="flex flex-col sm:flex-row md:flex-col! w-full gap-8 md:gap-10 order-2 md:order-1">
                         <div class="w-full">
                             <div class="bg-[#48ACE1] rounded-xl p-4 overflow-hidden">
-                                <img loading="lazy" src="../lib/img/iproc cloud/fitur-1x2.webp" data-aos="zoom-in-up"
+                                <img loading="lazy" src="../lib/img/iproc-cloud/fitur-1x2.webp" data-aos="zoom-in-up"
                                     data-aos-duration="800"
                                     class="mx-auto relative -bottom-4 w-4/5 aos-init aos-animate" alt="Fitur Desktop 1">
                             </div>
@@ -613,7 +613,7 @@
                         </div>
                         <div class="w-full">
                             <div class="bg-[#FFBC50] rounded-xl p-4 overflow-hidden">
-                                <img loading="lazy" src="../lib/img/iproc cloud/fitur-2x2.webp" data-aos="zoom-in-up"
+                                <img loading="lazy" src="../lib/img/iproc-cloud/fitur-2x2.webp" data-aos="zoom-in-up"
                                     data-aos-duration="800"
                                     class="mx-auto relative -bottom-4 w-4/5 aos-init aos-animate" alt="Fitur Desktop 1">
                             </div>
@@ -632,7 +632,7 @@
                         <div
                             class="w-[40%] lg:w-[62%] h-auto rounded-full p-2 bg-gradient-to-b from-sky-200  to-sky-500 to-40% mx-auto my-auto relative z-30 -translate-y-10">
                             <div class="w-full h-auto rounded-full bg-white flex items-center justify-center relative">
-                                <img loading="lazy" src="../lib/img/iproc cloud/iProc Cloud Vertical.svg"
+                                <img loading="lazy" src="../lib/img/iproc-cloud/iProc Cloud Vertical.svg"
                                     alt="Logo iProc Cloud Vertical">
                                 <svg class="absolute arrow-l-t hidden md:block" width="104" height="239"
                                     viewBox="0 0 104 239" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -676,7 +676,7 @@
                     <div class="flex flex-col sm:flex-row md:flex-col! w-full gap-8 md:gap-10 order-3">
                         <div class="w-full">
                             <div class="bg-[#FFBC50] rounded-xl p-4 overflow-hidden">
-                                <img loading="lazy" src="../lib/img/iproc cloud/fitur-3x2.webp" data-aos="zoom-in-up"
+                                <img loading="lazy" src="../lib/img/iproc-cloud/fitur-3x2.webp" data-aos="zoom-in-up"
                                     data-aos-duration="800"
                                     class="mx-auto relative -bottom-4 w-4/5 aos-init aos-animate" alt="Fitur Desktop 1">
                             </div>
@@ -692,7 +692,7 @@
                         </div>
                         <div class="w-full">
                             <div class="bg-[#48ACE1] rounded-xl p-4 overflow-hidden">
-                                <img loading="lazy" src="../lib/img/iproc cloud/fitur-4x2.webp" data-aos="zoom-in-up"
+                                <img loading="lazy" src="../lib/img/iproc-cloud/fitur-4x2.webp" data-aos="zoom-in-up"
                                     data-aos-duration="800"
                                     class="mx-auto relative -bottom-4 w-4/5 aos-init aos-animate" alt="Fitur Desktop 1">
                             </div>
@@ -711,7 +711,7 @@
         <section id="perbandingan" class="hidden-iproc py-12 sm:py-24">
             <div class="max-w-screen-2xl mx-auto px-8 xl:px-14!">
                 <img loading="lazy" src="../lib/img/Iproc cloud.svg" class="w-48 sm:w-72 mb-12 mx-auto"
-                    alt="Logo iproc cloud">
+                    alt="Logo iproc-cloud">
                 <h2 class="text-2xl sm:text-4xl! font-bold text-gray-900 mb-12 text-center">
                     Perbedaan iProc VMS, iProc e-Bidding dan iProc Private Cloud
                 </h2>
