--- a/iproc-cloud/index.html
+++ b/iproc-cloud/index.html
@@ -265,8 +265,7 @@
                     </div>
                     <div class="w-full lg:w-7/12">
                         <h2 class="text-lg text-gray-500 text-left mb-8"><span
-                                class="text-gray-900 text-3xl sm:text-5xl font-bold">Sebagai tim pengadaan,</span> <br>
-                            <br>
+                                class="text-gray-900 text-3xl sm:text-5xl font-bold block mb-2">Sebagai tim pengadaan,</span>
                             Tentunya Anda
                             ingin proses pengadaan berjalan dengan cepat, hemat
                             biaya, dan transparan. Tapi, kenyataannya…
@@ -381,7 +380,7 @@
                 <div class="flex flex-col lg:flex-row items-stretch justify-center gap-8">
                     <div class="w-full lg:w-7/12 order-2 lg:order-1">
                         <h2 class="text-3xl lg:text-5xl text-gray-900 text-left font-bold mb-8">Ingin beralih ke sistem
-                            eProcurement, tapi...</h2>
+                            <span class="whitespace-nowrap">e-Procurement</span>, tapi...</h2>
                         <ul class="text-left text-lg space-y-6">
                             <li class="flex items-center gap-3">
                                 <span class="bg-[#DAF1FF] p-3 rounded-lg">
@@ -392,7 +391,7 @@
                                             fill="#005DB5" />
                                     </svg>
                                 </span>
-                                <span class="text-gray-900 font-bold">Biaya sistem eProcurement terlalu mahal?</span>
+                                <span class="text-gray-900 font-bold">Biaya sistem e-Procurement terlalu mahal?</span>
                             </li>
                             <li class="flex items-center gap-3">
                                 <span class="bg-[#DAF1FF] p-3 rounded-lg">
@@ -697,7 +696,7 @@
                                     class="mx-auto relative -bottom-4 w-4/5 aos-init aos-animate" alt="Fitur Desktop 1">
                             </div>
                             <div class="mt-4">
-                                <h3 class="text-base sm:text-xl! font-semibold text-gray-900">eBidding</h3>
+                                <h3 class="text-base sm:text-xl! font-semibold text-gray-900">e-Bidding</h3>
                                 <p class="text-sm sm:text-base text-gray-500 mt-2">
                                     Proses pengbaseaan secara elektronik dari permintaan pengadaan, undangan ke vendor,
                                     evaluasi sampai dengan penunjukan pemenang.
@@ -968,7 +967,7 @@
                                         Direkomendasikan
                                     </span>
                                     <h3 class="text-900 text-lg xl:text-2xl font-semibold text-center mb-5 mt-12">Cloud
-                                        eBidding
+                                        e-Bidding
                                     </h3>
                                     <div class="mb-5">
                                         <p class="text-2xl xl:text-4xl text-[#005db5] font-bold text-center">11 Juta
