--- a/iproc-cloud/index.html
+++ b/iproc-cloud/index.html
@@ -264,16 +264,16 @@
                             alt="Pain Point Illustration">
                     </div>
                     <div class="w-full lg:w-7/12">
-                        <h2 class="text-lg text-gray-500 text-left mb-8"><span
+                        <h2 class="text-base sm:text-lg text-gray-500 text-left mb-8"><span
                                 class="text-gray-900 text-3xl sm:text-5xl font-bold block mb-2">Sebagai tim pengadaan,</span>
                             Tentunya Anda
                             ingin proses pengadaan berjalan dengan cepat, hemat
                             biaya, dan transparan. Tapi, kenyataannya…
                         </h2>
-                        <ul class="text-left text-lg space-y-6">
+                        <ul class="text-left text-base sm:text-lg space-y-6">
                             <li class="flex items-center gap-3">
                                 <span class="bg-red-100 p-3 rounded-full">
-                                    <svg class="flex-shrink-0" xmlns="http://www.w3.org/2000/svg" width="12" height="13"
+                                    <svg class="flex-shrink-0 w-3 h-3 sm:w-4 sm:h-4" xmlns="http://www.w3.org/2000/svg" width="12" height="13"
                                         viewBox="0 0 12 13" fill="none">
                                         <g clip-path="url(#clip0_10242_6721)">
                                             <path
@@ -293,7 +293,7 @@
                             </li>
                             <li class="flex items-center gap-3">
                                 <span class="bg-red-100 p-3 rounded-full">
-                                    <svg class="flex-shrink-0" xmlns="http://www.w3.org/2000/svg" width="12" height="13"
+                                    <svg class="flex-shrink-0 w-3 h-3 sm:w-4 sm:h-4" xmlns="http://www.w3.org/2000/svg" width="12" height="13"
                                         viewBox="0 0 12 13" fill="none">
                                         <g clip-path="url(#clip0_10242_6721)">
                                             <path
@@ -312,7 +312,7 @@
                             </li>
                             <li class="flex items-center gap-3">
                                 <span class="bg-red-100 p-3 rounded-full">
-                                    <svg class="flex-shrink-0" xmlns="http://www.w3.org/2000/svg" width="12" height="13"
+                                    <svg class="flex-shrink-0 w-3 h-3 sm:w-4 sm:h-4" xmlns="http://www.w3.org/2000/svg" width="12" height="13"
                                         viewBox="0 0 12 13" fill="none">
                                         <g clip-path="url(#clip0_10242_6721)">
                                             <path
@@ -332,7 +332,7 @@
                             </li>
                             <li class="flex items-center gap-3">
                                 <span class="bg-red-100 p-3 rounded-full">
-                                    <svg class="flex-shrink-0" xmlns="http://www.w3.org/2000/svg" width="12" height="13"
+                                    <svg class="flex-shrink-0 w-3 h-3 sm:w-4 sm:h-4" xmlns="http://www.w3.org/2000/svg" width="12" height="13"
                                         viewBox="0 0 12 13" fill="none">
                                         <g clip-path="url(#clip0_10242_6721)">
                                             <path
@@ -352,7 +352,7 @@
                             </li>
                             <li class="flex items-center gap-3">
                                 <span class="bg-red-100 p-3 rounded-full">
-                                    <svg class="flex-shrink-0" xmlns="http://www.w3.org/2000/svg" width="12" height="13"
+                                    <svg class="flex-shrink-0 w-3 h-3 sm:w-4 sm:h-4" xmlns="http://www.w3.org/2000/svg" width="12" height="13"
                                         viewBox="0 0 12 13" fill="none">
                                         <g clip-path="url(#clip0_10242_6721)">
                                             <path
@@ -381,10 +381,10 @@
                     <div class="w-full lg:w-7/12 order-2 lg:order-1">
                         <h2 class="text-3xl lg:text-5xl text-gray-900 text-left font-bold mb-8">Ingin beralih ke sistem
                             <span class="whitespace-nowrap">e-Procurement</span>, tapi...</h2>
-                        <ul class="text-left text-lg space-y-6">
+                        <ul class="text-left text-base sm:text-lg space-y-6">
                             <li class="flex items-center gap-3">
                                 <span class="bg-[#DAF1FF] p-3 rounded-lg">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                    <svg class="w-5 h-5 sm:w-6 sm:h-6" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                         fill="none">
                                         <path
                                             d="M2.51827 0.302246V20.7467H22.6644V23.3022H0V0.302246H2.51827ZM21.3289 4.05807L24 6.76865L16.3688 14.5128L12.5914 10.6791L7.63119 15.7131L4.96016 13.0025L12.5914 5.25834L16.3688 9.09208L21.3289 4.05807Z"
@@ -395,7 +395,7 @@
                             </li>
                             <li class="flex items-center gap-3">
                                 <span class="bg-[#DAF1FF] p-3 rounded-lg">
-                                    <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
+                                    <svg class="w-5 h-5 sm:w-6 sm:h-6" width="24" height="25" viewBox="0 0 24 25" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path
                                             d="M3.16294 1.07737C4.84041 0.481011 6.78546 0.854149 8.12811 2.1968C9.47115 3.53983 9.84414 5.48559 9.24704 7.16339L24 21.9165L21.1142 24.8022L6.35974 10.0498C4.68227 10.6462 2.73722 10.273 1.39456 8.93033C0.051526 7.5873 -0.32145 5.64153 0.275635 3.96374L3.31843 7.00647C4.11533 7.80335 5.40735 7.80335 6.20423 7.00647C7.00113 6.20957 7.00113 4.91756 6.20423 4.12067L3.16294 1.07737ZM17.2665 3.6397L21.5953 1.23488L23.5191 3.15874L21.1142 7.48743L18.7093 7.96839L15.8236 10.8542L13.8997 8.93033L16.7855 6.04453L17.2665 3.6397ZM7.64715 14.221L10.5329 17.1067L3.79941 23.8403C3.00251 24.6372 1.71048 24.6372 0.9136 23.8403C0.163581 23.0902 0.119463 21.9016 0.781235 21.1L0.9136 20.9544L7.64715 14.221Z"
@@ -407,7 +407,7 @@
                             </li>
                             <li class="flex items-center gap-3">
                                 <span class="bg-[#DAF1FF] p-3 rounded-lg">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="21" viewBox="0 0 24 21"
+                                    <svg class="w-5 h-5 sm:w-6 sm:h-6" xmlns="http://www.w3.org/2000/svg" width="24" height="21" viewBox="0 0 24 21"
                                         fill="none">
                                         <path
                                             d="M8.87899 10.8017L11.192 10.8022C13.8411 10.8022 15.9886 12.923 15.9886 15.5391H8.52616L8.52722 16.5917L17.0545 16.5909V15.5391C17.0545 14.3997 16.7153 13.3253 16.11 12.3803L19.1863 12.3812C21.3099 12.3812 23.1433 13.6078 24 15.3827C21.4794 18.6675 17.3976 20.8022 12.7909 20.8022C9.84758 20.8022 7.35427 20.1806 5.32917 19.0919L5.33062 9.29803C6.65826 9.48582 7.87312 10.0188 8.87899 10.8017ZM4.26361 18.697C4.26361 19.2784 3.7864 19.7496 3.19771 19.7496H1.0659C0.477226 19.7496 0 19.2784 0 18.697V9.22329C0 8.64194 0.477226 8.17067 1.0659 8.17067H3.19771C3.7864 8.17067 4.26361 8.64194 4.26361 9.22329V18.697ZM18.1204 3.96014C19.8864 3.96014 21.3181 5.37397 21.3181 7.11804C21.3181 8.86209 19.8864 10.2759 18.1204 10.2759C16.3543 10.2759 14.9227 8.86209 14.9227 7.11804C14.9227 5.37397 16.3543 3.96014 18.1204 3.96014ZM10.6591 0.802246C12.425 0.802246 13.8568 2.21608 13.8568 3.96014C13.8568 5.7042 12.425 7.11804 10.6591 7.11804C8.89299 7.11804 7.46132 5.7042 7.46132 3.96014C7.46132 2.21608 8.89299 0.802246 10.6591 0.802246Z"
