--- a/iproc-cloud/index.html
+++ b/iproc-cloud/index.html
@@ -980,7 +980,7 @@
                                         <p class="text-sm xl:text-base text-center mt-4 text-gray-900">
                                             Setup & implementasi dalam <strong>5 hari</strong> <br>
                                             10 User | Unlimited vendor | <br>
-                                            5 Paket Pengadaan
+                                            5 Paket Pengadaan / Bulan
                                         </p>
                                     </div>
                                 </div>
